<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_task">Tasks</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_employee">Employees</string>

    <string name="login">Login (Email)</string>
    <string name="password">Password</string>
    <string name="btn_enter">Enter</string>
    <string name="tasks">Tasks</string>
    <string name="settings">Settings</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="exit">Exit</string>
    <string name="theme_dark">Dark theme</string>
    <string name="apply">Apply</string>

    <string name="fields_are_not_filled">Fields are not filled</string>
    <string name="login_not_entered">Login not entered</string>
    <string name="password_not_entered">Password not entered</string>
    <string name="there_is_no_user_with_this_username">There is no user with this username</string>
    <string name="invalid_password">Invalid password</string>
    <string name="not_all_fields_are_filled_in">Not all fields are filled in</string>

    <string name="employees">Employees</string>
    <string name="listEmpty">The list is empty</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="addEmployee">Adding an employee</string>
    <string name="position">Position</string>
    <string name="patronymic">Patronymic</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="adding_a_task">Adding a task</string>
    <string name="heading">Heading</string>
    <string name="description">Description</string>
    <string name="date">Date</string>

    <string-array name="language_array">
        <item>English</item>
        <item>Russian</item>
    </string-array>
    <string name="btn_reg">Registration</string>
    <string name="director_registered">Director registered</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="employee_added">Employee added</string>
    <string name="registration_is_required_for_the_head_of_the_group_if_you_are_not_one_then_contact_the_head_for_the_login_and_password_from_your_account">Registration is required for the head of the group, if you are not one, then contact the head for the login and password from your account</string>
    <string name="completed">Competed:</string>
    <string name="notCompleted">Not completed:</string>
    <string name="statistics">Statistics</string>
</resources>