<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.employee.add.AddEmployeeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_above="@+id/addEmployeeBtn">
            <EditText
                android:id="@+id/surname_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/surname"
                android:ems="14"
                android:layout_margin="10dp"/>
            <EditText
                android:id="@+id/first_name_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:ems="14"
                android:layout_margin="10dp"/>
            <EditText
                android:id="@+id/patronymic_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/patronymic"
                android:ems="14"
                android:layout_margin="10dp"/>
            <EditText
                android:id="@+id/position_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/position"
                android:ems="14"
                android:layout_margin="10dp"/>
            <EditText
                android:id="@+id/login_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/login"
                android:ems="14"
                android:layout_margin="10dp"/>
            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:ems="14"
                android:layout_margin="10dp"/>
            <ListView
                android:id="@+id/taskListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <Button
            android:id="@+id/addEmployeeBtn"
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>