<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authorization.AuthorizationActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <EditText
            android:id="@+id/login_edit_text"
            android:hint="@string/login"
            android:inputType="textEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:layout_margin="10dp"/>
        <EditText
            android:id="@+id/password_edit_text"
            android:hint="@string/password"
            android:inputType="textWebPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:layout_margin="10dp" />
        <EditText
            android:id="@+id/surname_edit_text"
            android:hint="@string/surname"
            android:inputType="textCapSentences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:layout_margin="10dp"
            android:visibility="gone"/>
        <EditText
            android:id="@+id/first_name_edit_text"
            android:hint="@string/name"
            android:inputType="textCapSentences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:layout_margin="10dp"
            android:visibility="gone"/>
        <EditText
            android:id="@+id/patronymic_edit_text"
            android:hint="@string/patronymic"
            android:inputType="textCapSentences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:layout_margin="10dp"
            android:visibility="gone"/>
        <EditText
            android:id="@+id/position_edit_text"
            android:hint="@string/position"
            android:inputType="textCapSentences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:layout_margin="10dp"
            android:visibility="gone"/>
        <Button
            android:id="@+id/btn_enter"
            android:text="@string/btn_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:textColor="@color/white"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_reg"
        android:text="@string/btn_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="70dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:gravity="center"
        android:text="@string/registration_is_required_for_the_head_of_the_group_if_you_are_not_one_then_contact_the_head_for_the_login_and_password_from_your_account"
        android:visibility="gone"/>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>