<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.task.add.AddTaskFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/heading_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/heading"
            android:ems="14"
            android:layout_margin="10dp"/>
        <EditText
            android:id="@+id/description_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:hint="@string/description"
            android:gravity="top"
            android:ems="14"
            android:inputType="textMultiLine"
            android:lines="4"
            android:layout_margin="10dp"/>
        <EditText
            android:id="@+id/date_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:ems="14"
            android:layout_margin="10dp"
            android:inputType="date"/>
    </LinearLayout>
    <Button
        android:id="@+id/addTaskBtn"
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>